--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
     <header>
         <nav>
-            <a href="#"><i class="fa-solid fa-house"></i></a>
-            <a href="cadastro.html"><i class="fa-solid fa-film"></i></a>
-            <a href="#contato"><i class="fa-solid fa-comment"></i></a>
+            <a href="index.html"><i class="fa-solid fa-house"></i></a>
+            <a href="cadastro.html"><i class="fa-solid fa-image-portrait"></i></a>
+            <a href="papeis.html"><i class="fa-solid fa-list-check"></i></a>
         </nav>
     </header>
 
@@ -27,7 +27,7 @@
                 <div class="conteudo">
                     <h1>O clássico <strong style="color: #E18902;">WEREWOLF</strong></h5>
                     <p>Adicione os players na lista e divirta-se!</p>
-                    <a href="cadastro.html"><button class="botao-conteudo">Cadastrar jogadores</button></a>
+                    <a href="cadastro.html"><button class="botao-conteudo" id="comecar-jogo">Jogar</button></a>
                 </div>
             </div>
         </section>
