Pequenas correções, novo layout de registro

--- a/cadastro.html
+++ b/cadastro.html
@@ -15,13 +15,14 @@
     <header>
         <nav>
             <a href="index.html"><i class="fa-solid fa-house"></i></a>
-            <a href="cadastro.html"><i class="fa-solid fa-image-portrait"></i></a>
-            <a href="papeis.html"><i class="fa-solid fa-list-check"></i></a>
+            <a href="cadastro.html"><i class="fa-solid fa-user"></i></a>
+            <a href="papeis.html"><i class="fa-solid fa-layer-group"></i></a>
         </nav>
     </header>
     <div class="container-tabela">
         <section class="conteudo-grid" id="grid-conteudo">
             <div class="grid">
+                <div><img class="logo" src="img/logo.png" alt="Logo"></div>
                 <div>
                     <h2>Novo jogador</h2>
 
@@ -33,20 +34,20 @@
                     </form>
                 </div>
 
-                <div>
-                    <h2>Jogadores</h2>
-                    <a href="" id="deletar-todos"><button>Deletar todos</button></a>
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>ID</th>
-                                <th>Nome</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                        </tbody>
-                    </table> 
-                </div>
+            </div>
+            <div>
+                <h2>Jogadores registrados</h2>
+                <a href="" id="deletar-todos"><button>Deletar todos</button></a>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Nome</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table> 
             </div>
         </section>
         <div class="navegacao">
