--- a/papeis.html
+++ b/papeis.html
@@ -15,8 +15,8 @@
     <header id="header">
         <nav>
             <a href="index.html"><i class="fa-solid fa-house"></i></a>
-            <a href="cadastro.html"><i class="fa-solid fa-image-portrait"></i></a>
-            <a href="papeis.html"><i class="fa-solid fa-list-check"></i></a>
+            <a href="cadastro.html"><i class="fa-solid fa-user"></i></a>
+            <a href="papeis.html"><i class="fa-solid fa-layer-group"></i></a>
         </nav>
     </header>
     <div id="section-papeis">
