Adicionada primeira versão da tela de jogo

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <div class="grid">
                 <div><img class="logo" src="img/logo.png" alt="Logo"></div>
                 <div class="conteudo">
-                    <h1>O clássico <strong style="color: #E18902;">WEREWOLF</strong></h5>
-                    <p>Adicione os players na lista e divirta-se!</p>
-                    <a href="cadastro.html"><button class="botao-conteudo" id="comecar-jogo">Jogar</button></a>
+                    <h1>O clássico <strong style="color: #E18902;">LOBISOMEM</strong></h5>
+                    <p>Adicione os players na lista, escolha os papéis da sessão e divirta-se!</p>
+                    <a href="cadastro.html"><button class="botao-conteudo" id="salvar-sessao">Jogar</button></a>
                 </div>
             </div>
         </section>
