--- a/cadastro.html
+++ b/cadastro.html
@@ -22,9 +22,8 @@
     <div class="container-tabela">
         <section class="conteudo-grid" id="grid-conteudo">
             <div class="grid">
-                <div><img class="logo" src="img/logo.png" alt="Logo"></div>
                 <div>
-                    <h2>Novo jogador</h2>
+                    <h2>Adicionar jogador</h2>
 
                     <form action="" method="">
                         <label for="nome">Nome:</label>
@@ -33,26 +32,26 @@
                         <button class="cadastrar" type="submit">Adicionar</button>
                     </form>
                 </div>
-
+                <div>
+                    <h2>Jogadores já adicionados</h2>
+                    <a href="" id="deletar-todos"><button>Deletar todos</button></a>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Nome</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        </tbody>
+                    </table> 
+                </div>
             </div>
-            <div>
-                <h2>Jogadores registrados</h2>
-                <a href="" id="deletar-todos"><button>Deletar todos</button></a>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Nome</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table> 
-            </div>
+            
         </section>
         <div class="navegacao">
         <a href="index.html"><button class="botao-conteudo">Voltar</button></a>
-        <a href="papeis.html"><button class="botao-conteudo" id="comecar-jogo">Continuar</button></a>
+        <a href="papeis.html"><button class="botao-conteudo" id="salvar-sessao-ut">Continuar</button></a>
         </div>
     </div>
     <footer class="footer">
