Adicionada lógica de troca de jogadores

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://kit.fontawesome.com/8b0455432d.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="img/mini-logo.png" type="image/x-icon">
 </head>
-<body>
+<body data-page="index">
     <header>
         <nav>
             <a href="index.html"><i class="fa-solid fa-house"></i></a>
