--- a/papeis.html
+++ b/papeis.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="img/mini-logo.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/8b0455432d.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body data-page="papeis">
     <header>
         <nav>
             <a href="index.html"><i class="fa-solid fa-house"></i></a>
@@ -20,7 +20,7 @@
         </nav>
     </header>
 
-    <div id="section-papeis">
+    <div id="section-papeis" class="pai-papeis">
         <h2 id="topo">Papéis de Jogo</h2>
         <section >
             <form id="form-papeis">
