--- a/cadastro.html
+++ b/cadastro.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="img/mini-logo.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/8b0455432d.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body data-page="cadastro">
     <header>
         <nav>
             <a href="index.html"><i class="fa-solid fa-house"></i></a>
@@ -19,7 +19,7 @@
             <a href="papeis.html"><i class="fa-solid fa-layer-group"></i></a>
         </nav>
     </header>
-    <div class="container-tabela">
+    <div class="container-tabela" id="pai-cadastro">
         <section class="conteudo-grid" id="grid-conteudo">
             <div class="grid">
                 <div>
