--- a/noite.html
+++ b/noite.html
@@ -15,6 +15,8 @@
     <div id="pai-mestre-jogo" class="container-tabela">
         <div id="mestre-jogo">
             <div class="grid">
+                
+        <p>Voltar desse ponto fará com que o jogo precise ser reiniciado.</p>
                 <div class="imagem-papel">
                     <h2 id="topo">Mestre do jogo</h2>
                     <img id="imagem-papel" src="img/mestre.png" alt="Imagem do papel">
@@ -31,8 +33,7 @@
             
         </div>
         <div class="navegacao">
-            <a href="mestre.html"><button class="botao-conteudo">Voltar</button></a>
-            <a href="noite.html"><button class="botao-conteudo">Continuar</button></a>
+            <a href="mediador.html"><button class="botao-conteudo">Continuar</button></a>
         </div>
     </div>
 </body>
