--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
     </header>
 
-    <div class="container">
+    <div class="container" id="index">
         <section class="conteudo-grid" id="grid-conteudo">
             <div class="grid">
                 <div><img class="logo" src="img/logo.png" alt="Logo"></div>
@@ -32,9 +32,7 @@
             </div>
         </section>
     </div>
-    <footer>
-        <h5>Todos os direitos reservados © 2024</h5>
-    </footer>
+    
     <script src="components/script.js"></script>
 </body>
 </html>
