--- a/mediador.html
+++ b/mediador.html
@@ -19,11 +19,9 @@
                 <div>
                     <div class="nome-pessoa">
                         <div class="papel-jogador">
-                            <p>O Mestre do Jogo diz:</p>
-                        </div>
-                        <div class="espaco">
                             <p class="comando"></p>
                         </div>
+                        <div class="espaco"></div>
                     </div>
                 </div>
                 <div class="navegacao">
