--- a/cadastro.html
+++ b/cadastro.html
@@ -32,7 +32,7 @@
                         <button class="cadastrar" type="submit">Adicionar</button>
                     </form>
                 </div>
-                <div>
+                <div id="tabela-registro">
                     <h2>Jogadores já adicionados</h2>
                     <a href="" id="deletar-todos"><button>Deletar todos</button></a>
                     <table>
