Adicionada página relatório

--- a/mediador.html
+++ b/mediador.html
@@ -32,7 +32,7 @@
         </div>
     </div>
 
-    <!-- Página -->
+    <!-- Página Principal -->
     <div id="pagina-mediador">
         <div id="mestre-jogo">
             <div class="grid" id="papel">
@@ -44,7 +44,7 @@
                 <p id="papel-jogador">Papel: Papel do Jogador</p>
                 <p id="descricao-papel" class="espaco">Descrição do papel aparecerá aqui.</p>
             </div>
-            <div class="navegacao">
+            <div id="navegacao">
                 <a href="mediador.html"><button id="botao-conteudo">Continuar</button></a>
             </div>
         </div>
