Agora lobisomens podem atacar

--- a/mediador.html
+++ b/mediador.html
@@ -41,7 +41,7 @@
                 
             </div>
             <div class="nome-pessoa">
-                <p id="papel-jogador">Papel: Papel do Jogador</p>
+                <p id="papel-jogador">Papel do Jogador</p>
                 <p id="descricao-papel" class="espaco">Descrição do papel aparecerá aqui.</p>
             </div>
             <div id="navegacao">
