Terminado papel "médico" e "vidente"

--- a/noite.html
+++ b/noite.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="img/mini-logo.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/8b0455432d.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body data-page="noite">
     <div id="pai-mestre-jogo" class="container-tabela">
         <div id="mestre-jogo">
             <div class="grid">
@@ -42,5 +42,6 @@
         
         
     </div>
+    <script src="components/script.js"></script>
 </body>
 </html>
