--- a/relatorio.html
+++ b/relatorio.html
@@ -11,16 +11,20 @@
     <link rel="shortcut icon" href="img/mini-logo.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/8b0455432d.js" crossorigin="anonymous"></script>
 </head>
+
+    <!-- Relatório -->
+
 <body data-page="relatorio">
-    <div id="pai-mestre-jogo" class="container-tabela">
-        <div id="mestre-jogo">
+    <div id="pai-dia" class="container-tabela">
+        <div id="mestre-dia">
             <div class="grid">
                 <div class="imagem-papel">
-                    <p id="nome-jogador">RELATÓRIO</p>
+                    <p id="nome-jogador">ESTÁ DE DIA</p>
+                    <p>Passe o aparelho para o mestre do jogo.</p>
                 </div>
             </div>
             <div class="nome-pessoa">
-                <h3 id="nome-jogador">Passe o aparelho para o mestre do jogo.</h3>
+                <h3 id="nome-jogador">RELATÓRIO</h3>
                 <div id="relatorio" class="espaco">
                     <div class="grid">
                         <p id="relatorio-jogador">Aguardando sorteio...</p>
@@ -35,7 +39,6 @@
         </div>
     </div>
 
-    <!-- Relatório -->
     
 
     <script src="components/script.js"></script>
