Adicionado papel de "bruxa"

--- a/papeis.html
+++ b/papeis.html
@@ -45,7 +45,7 @@
                       <img src="img/medico.png" alt="">
                       <input type="checkbox" checked name="papel" value="médico"> Médico
                     </label>
-                    <p>Durante a noite, você acorda e seleciona um jogador que não poderá ser morto pelos lobisomens naquela noite. Você não poderá proteger o mesmo jogador duas noites seguidas.</p>
+                    <p>Durante a noite, você acorda e seleciona um jogador que não poderá ser morto pelos lobisomens naquela noite. Você não poderá proteger o mesmo jogador duas vezes seguidas.</p>
                   </div>
                   <div class="label-form">
                     <label>
