--- a/relatorio.html
+++ b/relatorio.html
@@ -19,15 +19,19 @@
         <div id="mestre-dia">
             <div class="grid">
                 <div class="imagem-papel">
-                    <p id="nome-jogador">ESTÁ DE DIA</p>
-                    <p>Passe o aparelho para o mestre do jogo.</p>
+                    
+                    <p id="obs">Passe o aparelho para o mestre do jogo.</p>
+                    <p id="dia">DIA</p>
                 </div>
+                
+                <img class="imagem-papel" src="img/mestre.png" alt="Imagem do papel">
+
             </div>
             <div class="nome-pessoa">
-                <h3 id="nome-jogador">RELATÓRIO</h3>
+                <h3 class="nome-jogador">MURAL DA VILA</h3>
                 <div id="relatorio" class="espaco">
                     <div class="grid">
-                        <p id="relatorio-jogador">Aguardando sorteio...</p>
+                        <p id="relatorio-jogador"></p>
                         <p id="descricao-relatorio">Não teve sorte dessa vez...</p>
                     </div>
                 </div>
