Terminado papel "pacifista", adicionado papel "sacerdote"

--- a/papeis.html
+++ b/papeis.html
@@ -66,7 +66,7 @@
                       <img src="img/aprendiz-de-vidente.png" alt="">
                       <input type="checkbox" checked name="papel" value="aprendiz de vidente"> Aprendiz de Vidente
                     </label>
-                    <p>Se o vidente morrer, você tomará seu lugar e começará a procurar por lobisomens.</p>
+                    <p>Você pode aprender vidência durante a noite. Se aprender por 3 noites seguidas, você se torna vidente.</p>
                   </div>
                   <div class="label-form">
                     <label>
