--- a/relatorio.html
+++ b/relatorio.html
@@ -53,54 +53,14 @@
                 </div>
             </div>
             <div class="navegacao">
-                <a href="votacao.html">
-                <button>Pular</button>
-                </a>
+                <button id="pular">Pular</button>
             </div>
         </div>
     </div>
 
-    <script>
-document.addEventListener('DOMContentLoaded', () => {
-    const modal = document.getElementById('modal-reuniao');
-    const botaoContinuar = document.getElementById('sortear');
-    const contadorElemento = document.getElementById('contador');
-    const botaoIniciar = document.getElementById('iniciar-contagem');
-
-    let contadorInterval;
-
-    // Abrir o modal ao clicar no botão "Continuar"
-    botaoContinuar.addEventListener('click', () => {
-        modal.style.display = 'block';
-    });
-
-    // Iniciar o contador ao clicar no botão "Iniciar Contagem"
-    botaoIniciar.addEventListener('click', () => {
-        let tempoRestante = 89;
-
-        botaoIniciar.disabled = true; // Desabilitar o botão para evitar múltiplos cliques
-
-        contadorInterval = setInterval(() => {
-            const minutos = Math.floor(tempoRestante / 60);
-            const segundos = tempoRestante % 60;
-
-            contadorElemento.textContent =
-                `${minutos.toString().padStart(2, '0')}:${segundos.toString().padStart(2, '0')}`;
-
-            if (tempoRestante === 0) {
-                clearInterval(contadorInterval);
-                window.location.href = 'votacao.html'; // Redirecionar ao atingir 0
-            }
-
-            tempoRestante--;
-        }, 1000);
-    });
-});
-
-
-    </script>
+    
+    <script src="components/script.js"></script>
     
 
-    <script src="components/script.js"></script>
 </body>
 </html>
