Adicionado novos papéis, tela de votação e vitória terminadas.

--- a/papeis.html
+++ b/papeis.html
@@ -21,7 +21,7 @@
     </header>
 
     <div id="section-papeis" class="pai-papeis">
-        <h2 id="topo">Papéis de Jogo</h2>
+        <h2 id="topo-papeis">Papéis de Jogo</h2>
         <section >
             <form id="form-papeis">
             <div>
