--- a/votacao.html
+++ b/votacao.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
     <link rel="shortcut icon" href="img/mini-logo.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/8b0455432d.js" crossorigin="anonymous"></script>
 </head>
+
 <body data-page="votacao">
     <!-- Modal -->
     <div id="dom-mestre-jogo-votacao">
@@ -31,7 +33,7 @@
                     </div>
                     <div class="navegacao">
                         <button id="continuar-btn">Confirmar Voto</button>
-                        <button id="pular-btn">Pular Vez</button> <!-- Botão Pular -->
+                        <button id="pular-btn">Pular Vez</button>
                     </div>
                 </div>
             </div>
@@ -61,22 +63,44 @@
                     return;
                 }
 
-                nomeJogadorAtual.textContent = jogadorAtual.nome;
+                const silenciados = JSON.parse(localStorage.getItem('silenciado')) || [];
+                const idiota = JSON.parse(localStorage.getItem('idiota')) || [];
 
-                listaJogadores.innerHTML = '';
-                jogadoresVivos
-                    .filter(jogador => jogador.nome !== jogadorAtual.nome)
-                    .forEach(jogador => {
-                        const li = document.createElement('li');
-                        li.classList.add('item-jogador');
-                        li.innerHTML = `
-                            <label>
-                                <input type="radio" name="voto" value="${jogador.nome}" />
-                                <span>${jogador.nome}</span>
-                            </label>
-                        `;
-                        listaJogadores.appendChild(li);
-                    });
+                const jogadorAtualNome = jogadorAtual.nome;
+
+                if (silenciados.includes(jogadorAtualNome)) {
+                    ordemDeVotacao.push(jogadorAtualNome);
+                    localStorage.setItem('ordemDeVotacao', JSON.stringify(ordemDeVotacao));
+
+                    alert(`${jogadorAtualNome} está silenciado pela Vovó Zangada e não pode votar.`);
+                    atualizarModal();
+                }
+                else if (idiota.includes(jogadorAtualNome)){
+                    ordemDeVotacao.push(jogadorAtualNome);
+                    localStorage.setItem('ordemDeVotacao', JSON.stringify(ordemDeVotacao));
+
+                    alert(`${jogadorAtualNome} você é um idiota e não pode votar.`);
+                    atualizarModal();
+                }
+                else {
+                    nomeJogadorAtual.textContent = jogadorAtual.nome;
+
+                    listaJogadores.innerHTML = '';
+                    jogadoresVivos
+                        .filter(jogador => jogador.nome !== jogadorAtual.nome)
+                        .forEach(jogador => {
+                            const li = document.createElement('li');
+                            li.classList.add('item-jogador');
+                            li.innerHTML = `
+            <label>
+                <input type="radio" name="voto" value="${jogador.nome}" />
+                <span>${jogador.nome}</span>
+            </label>
+        `;
+                            listaJogadores.appendChild(li);
+                        });
+                }
+
             }
 
             function atualizarStatusJogador(nomeJogador, novoStatus) {
@@ -119,7 +143,7 @@
 
             function pularVez() {
                 const jogadorAtual = nomeJogadorAtual.textContent.replace('É a vez de: ', '');
-                
+
                 ordemDeVotacao.push(jogadorAtual);
                 localStorage.setItem('ordemDeVotacao', JSON.stringify(ordemDeVotacao));
 
@@ -127,10 +151,11 @@
             }
 
             continuarBtn.addEventListener('click', registrarVoto);
-            pularBtn.addEventListener('click', pularVez); 
+            pularBtn.addEventListener('click', pularVez);
 
             atualizarModal();
         });
     </script>
 </body>
+
 </html>
