--- a/pages/index.html
+++ b/pages/index.html
@@ -8,9 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/8b0455432d.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="../img/mini-logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/mini-logo.png" type="image/x-icon">
 </head>
 
 <body data-page="index">
@@ -20,25 +20,25 @@
     <header id="header-bar">
         <nav>
             <a href="index.html"><i id="icon" class="fa-solid fa-house"></i></a>
-            <a href="cadastro.html"><i id="icon" class="fa-solid fa-user"></i></a>
-            <a href="papeis.html"><i id="icon" class="fa-solid fa-layer-group"></i></a>
+            <a href="./pages/cadastro.html"><i id="icon" class="fa-solid fa-user"></i></a>
+            <a href="./pages/papeis.html"><i id="icon" class="fa-solid fa-layer-group"></i></a>
         </nav>
     </header>
     <div class="container" id="index">
         <section class="conteudo-grid" id="grid-conteudo">
             <div class="grid">
-                <div><img class="logo" src="../img/logo.png" alt="Logo"></div>
+                <div><img class="logo" src="img/logo.png" alt="Logo"></div>
                 <div class="conteudo">
                     <h1>O clássico <strong style="color: #E18902;">LOBISOMEM</strong></h5>
                         <p>Adicione os players na lista, escolha os papéis da sessão e divirta-se!</p>
-                        <a href="cadastro.html"><button class="botao-conteudo" id="salvar-sessao">Jogar</button></a>
+                        <a href="./pages/cadastro.html"><button class="botao-conteudo" id="salvar-sessao">Jogar</button></a>
                 </div>
             </div>
         </section>
 
     </div>
 
-    <script src="../components/index.js" type="module"></script>
+    <script src="components/index.js" type="module"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 </body>
 
